[package]
name = "Discord-Scanner-Rust"
version = "0.0.2"
edition = "2021"
build = "build.rs"
authors = ["ProMac <promac@multibot.run>"]
license = "GNU GENERAL PUBLIC LICENSE"
description = "A tool to search files"
readme = "README.md"
homepage = "https://multibot.run"
repository = "https://github.com/promac2k/discord-scanner"

[build-dependencies]
winresource = "0.1.23"

[dependencies]
colored = "3.0.0"
glob = "0.3.3"
figlet-rs = "0.1.5"

